changed text for one of the cards

--- a/index.html
+++ b/index.html
@@ -32,14 +32,13 @@
         <div class="recipe a">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-1.png" />
           <h2>CHOCOLATE MOUSSE</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">20 mins</p>
           <p class="description">
-            This delicious chocolate mousse will delight dinner guests of all ages!</p>
+            We talked a Harry Styles fanatic to get a better understanding of their sick and twisted world in <a href="https://soundcloud.com/will-logan-630663504/harry-styles-podcast?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">this episode</a>
+          </p>
         </div>
         <div class="recipe b">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
-          <h2>SMOKED LAMB WITH RICE</h2>
+          <h2>Fandom Freaks Episode 98</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">120 mins</p>
           <p class="description">
