--- a/index.html
+++ b/index.html
@@ -39,10 +39,8 @@
         <div class="recipe b">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
           <h2>Fandom Freaks Episode 98</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">120 mins</p>
           <p class="description">
-            Want to feel like your favorite relative came over and made you dinner? This comfort meal of smoked lamb and rice will quickly become a weekend favorite!
+            We talked a Harry Styles fanatic to get a better understanding of their sick and twisted world in <a href="https://soundcloud.com/will-logan-630663504/harry-styles-podcast?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">this episode</a>
           </p>
         </div>
         <div class="recipe c">
