text content completed

--- a/index.html
+++ b/index.html
@@ -31,25 +31,24 @@
       <main id="projects">
         <div class="recipe a">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-1.png" />
-          <h2>CHOCOLATE MOUSSE</h2>
+          <h2>GITHUB</h2>
           <p class="description">
-            We talked a Harry Styles fanatic to get a better understanding of their sick and twisted world in <a href="https://soundcloud.com/will-logan-630663504/harry-styles-podcast?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">this episode</a>
+            Check out my <a href="https://github.com/candlez" target="_blank">github account</a> to see the awesome code that have written in the past and continue to write in the present which then becomes the past.
           </p>
         </div>
         <div class="recipe b">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
           <h2>Fandom Freaks Episode 98</h2>
           <p class="description">
-            We talked a Harry Styles fanatic to get a better understanding of their sick and twisted world in <a href="https://soundcloud.com/will-logan-630663504/harry-styles-podcast?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">this episode</a>
+            We talked a Harry Styles fanatic to get a better understanding of their sick and twisted world in <a href="https://soundcloud.com/will-logan-630663504/harry-styles-podcast?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">this episode</a>
           </p>
         </div>
         <div class="recipe c">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-5.png" />
-          <h2>GOAT CHEESE SALAD</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">25 mins</p>
+          <h2>How Minecraft Can Save Us From AI Dystopia</h2>
           <p class="description">
-            In addition to the full flavor of goat cheese, this salad includes kale, avocado, and farro to balance it out.</p>
+            Mass unemployment as a result of AI like Chat-GPT is inevitable. I wrote about how Minecraft could be the answer <a href="https://medium.com/@thomasmcnamara_40253/how-minecraft-can-save-us-from-ai-dystopia-5308137baa91" target="_blank">here</a>
+          </p>
         </div>
         <div class="recipe d">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-4.png" />
