--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
           <h2>Fandom Freaks Episode 98</h2>
           <p class="description">
-            We talked a Harry Styles fanatic to get a better understanding of their sick and twisted world in <a href="https://soundcloud.com/will-logan-630663504/harry-styles-podcast?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">this episode</a>
+            We talked to a Harry Styles fanatic to get a better understanding of their sick and twisted world in <a href="https://soundcloud.com/will-logan-630663504/harry-styles-podcast?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">this episode</a>
           </p>
         </div>
         <div class="recipe c">
