--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
           <h2>Fandom Freaks Episode 98</h2>
           <p class="description">
-            We talked to a Harry Styles fanatic to get a better understanding of their sick and twisted world in <a href="https://soundcloud.com/will-logan-630663504/harry-styles-podcast?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">this episode</a>
+            We talked to a Harry Styles fanatic to get a better understanding of their sick and twisted world in <a href="https://soundcloud.com/will-logan-630663504/harry-styles-podcast?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">this episode</a>.
           </p>
         </div>
         <div class="recipe c">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-5.png" />
           <h2>How Minecraft Can Save Us From AI Dystopia</h2>
           <p class="description">
-            Mass unemployment as a result of AI like Chat-GPT is inevitable. I wrote about how Minecraft could be the answer <a href="https://medium.com/@thomasmcnamara_40253/how-minecraft-can-save-us-from-ai-dystopia-5308137baa91" target="_blank">here</a>
+            Mass unemployment as a result of AI like Chat-GPT is inevitable. I wrote about how Minecraft could be the answer <a href="https://medium.com/@thomasmcnamara_40253/how-minecraft-can-save-us-from-ai-dystopia-5308137baa91" target="_blank">here</a>.
           </p>
         </div>
         <div class="recipe d">
