--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
 
       <main id="projects">
         <div class="recipe a">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-1.png" />
+          <img src="/images/github.png" />
           <h2>GITHUB</h2>
           <p class="description">
             Check out my <a href="https://github.com/candlez" target="_blank">github account</a> to see the awesome code that have written in the past and continue to write in the present which then becomes the past.
           </p>
         </div>
         <div class="recipe b">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
+          <img src="images/fandom-freaks.jpg" />
           <h2>Fandom Freaks Episode 98</h2>
           <p class="description">
             We talked to a Harry Styles fanatic to get a better understanding of their sick and twisted world in <a href="https://soundcloud.com/will-logan-630663504/harry-styles-podcast?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">this episode</a>.
           </p>
         </div>
         <div class="recipe c">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-5.png" />
+          <img src="/images/minecraft.png" />
           <h2>How Minecraft Can Save Us From AI Dystopia</h2>
           <p class="description">
             Mass unemployment as a result of AI like Chat-GPT is inevitable. I wrote about how Minecraft could be the answer <a href="https://medium.com/@thomasmcnamara_40253/how-minecraft-can-save-us-from-ai-dystopia-5308137baa91" target="_blank">here</a>.
@@ -52,11 +52,10 @@
         </div>
         <div class="recipe d">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-4.png" />
-          <h2>CHICKEN SANDWICH</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">45 mins</p>
+          <h2>VT Student Registration Guide</h2>
           <p class="description">
-            We've packed a lot into this one - shredded cabbage, carmalized onions, deep-fried chicken, chipotle mayo, half-sour pickles, and a toasted sesame bun will leave you thoroughly satisfied!</p>
+            Here's a video I made!  
+          <p>
         </div>
         <div class="recipe e">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-3.png" />
