moved a word into a link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <img src="/images/github.png" />
           <h2>GITHUB</h2>
           <p class="description">
-            Check out my <a href="https://github.com/candlez" target="_blank">github account</a> to see the awesome code that have written in the past and continue to write in the present which then becomes the past.
+            Check out <a href="https://github.com/candlez" target="_blank">my github account</a> to see the awesome code that have written in the past and continue to write in the present which then becomes the past.
           </p>
         </div>
         <div class="recipe b">
