--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
       </main>
 
       <footer>
-        <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/savory.svg" class="logo">
+        <div>
+          <p class="copyright">© Thomas McNamara 2023</p>
+        </div>
       </footer>
 
     </div>
