--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
 
       <main id="projects">
         <div class="recipe a">
-          <img src="/images/github.png" />
+          <img src="/images/github.png" alt="GitHub's logo"/>
           <h2>GITHUB</h2>
           <p class="description">
             Check out <a href="https://github.com/candlez" target="_blank">my github account</a> to see the awesome code that have written in the past and continue to write in the present which then becomes the past.
           </p>
         </div>
         <div class="recipe b">
-          <img src="images/fandom-freaks.jpg" />
+          <img src="images/fandom-freaks.jpg" alt="a microphone"/>
           <h2>Fandom Freaks Episode 98</h2>
           <p class="description">
             We talked to a Harry Styles fanatic to get a better understanding of their sick and twisted world in <a href="https://soundcloud.com/will-logan-630663504/harry-styles-podcast?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">this episode</a>.
           </p>
         </div>
         <div class="recipe c">
-          <img src="/images/minecraft.png" />
+          <img src="/images/minecraft.png" alt="a grass block from Minecraft"/>
           <h2>How Minecraft Can Save Us From AI Dystopia</h2>
           <p class="description">
             Mass unemployment as a result of AI like Chat-GPT is inevitable. I wrote about how Minecraft could be the answer <a href="https://medium.com/@thomasmcnamara_40253/how-minecraft-can-save-us-from-ai-dystopia-5308137baa91" target="_blank">here</a>.
