--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
           </p>
         </div>
         <div class="recipe d">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-4.png" />
+          <img src="/images/video.PNG" alt="a still frame of a person with glitch effects"/>
           <h2>VT Student Registration Guide</h2>
           <p class="description">
-            Here's a video I made!  
+            Here's a <a href="https://youtube.com/shorts/JsxkNJQTZ9Y?feature=share" target="_blank">>video </a> I made! It's about registering to vote as a Virginia Tech Student. 
           <p>
         </div>
       </main>
