--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <img src="/images/video.PNG" alt="a still frame of a person with glitch effects"/>
           <h2>VT Student Registration Guide</h2>
           <p class="description">
-            Here's a <a href="https://youtube.com/shorts/JsxkNJQTZ9Y?feature=share" target="_blank">>video </a> I made! It's about registering to vote as a Virginia Tech Student. 
+            Here's a <a href="https://youtube.com/shorts/JsxkNJQTZ9Y?feature=share" target="_blank">video </a> I made! It's about registering to vote as a Virginia Tech Student. 
           <p>
         </div>
       </main>
